# geo-analyse

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml  settings.py
application/: application.py  container.py  routers.py
logic/: main.py
persistance/: models.py  postgres_connection.py  repository.py
