[tool.poetry]
name = "geo-analyse"
version = "0.1.0"
description = ""
authors = ["oytarhanova <oytarhanova@fintechiq.ru>"]
readme = "README.md"
packages = [{include = "geo_analyse"}]

[tool.poetry.dependencies]
python = "~3.12"
osmnx = "^1.9.1"
matplotlib = "^3.8.2"
libpysal = "^4.9.2"
contextily = "^1.5.0"
folium = "^0.15.1"
scikit-learn = "^1.4.0"
haversine = "^2.8.1"
sqlalchemy = "^2.0.26"
pydantic = "^2.6.1"
fastapi = "^0.109.2"
injector = "^0.21.0"
uvicorn = "^0.27.1"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

